fix(style): add a z-index to backdrop

--- a/src/Modals/index.css
+++ b/src/Modals/index.css
@@ -13,6 +13,7 @@
   right: 0;
   left: 0;
   bottom: 0;
+  z-index: 2099;
   background-color: rgba(0, 0, 0, .5);
 }
 
